--- a/DIARY/app/src/main/res/layout/activity_forgetpassword1.xml
+++ b/DIARY/app/src/main/res/layout/activity_forgetpassword1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/captain1"
+    android:background="@drawable/back1"
     tools:context=".Forgetpassword1">
 
 
@@ -18,7 +18,7 @@
         android:layout_marginTop="60dp"
         android:layout_marginEnd="100dp"
         android:background="@drawable/search_outline"
-        android:backgroundTint="#555555"
+        android:backgroundTint="#5E3030"
         android:backgroundTintMode="add"
         android:fontFamily="@font/nunito_bold"
         android:text="Send"
@@ -45,8 +45,8 @@
         android:paddingTop="10dp"
         android:paddingRight="20dp"
         android:paddingBottom="10dp"
-        android:textColor="#999999"
-        android:textColorHint="#ffffff"
+        android:textColor="#5E3030"
+        android:textColorHint="#5E3030"
         android:textSize="16sp" />
 
     <ProgressBar
@@ -70,17 +70,17 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="match_parent"
+        android:layout_width="335dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/enterEmail"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="76dp"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="-175dp"
         android:layout_marginRight="30dp"
         android:fontFamily="@font/berkshire_swash"
-        android:text="Captain's Diary"
-        android:textColor="#ffffff"
+        android:text="Scratch Pad"
+        android:textColor="#000000"
         android:textSize="50sp" />
 
 
