--- a/DIARY/app/src/main/res/layout/activity_editor.xml
+++ b/DIARY/app/src/main/res/layout/activity_editor.xml
@@ -84,6 +84,7 @@
         android:layout_marginEnd="28dp"
         android:layout_marginBottom="25dp"
         android:src="@drawable/ic_save_black_24dp"
+        app:backgroundTint="#5E3030"
         app:fabCustomSize="70dp"
         app:fabSize="auto"
         app:maxImageSize="50dp" />
