--- a/DIARY/app/src/main/res/layout/activity_main.xml
+++ b/DIARY/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/images"
+    android:background="@drawable/back1"
     tools:context=".MainActivity">
 
 
@@ -24,8 +24,8 @@
         android:paddingTop="10dp"
         android:paddingRight="20dp"
         android:paddingBottom="10dp"
-        android:textColor="#ffffff"
-        android:textColorHint="#ffffff"
+        android:textColor="#0C0303"
+        android:textColorHint="#0E0101"
         android:textSize="16sp" />
 
     <EditText
@@ -38,14 +38,14 @@
         android:background="@drawable/search_outline"
         android:ems="10"
         android:fontFamily="@font/nunito_semibold"
-        android:inputType="textPassword"
         android:hint="Enter password"
+        android:inputType="textPassword"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
         android:paddingRight="20dp"
         android:paddingBottom="10dp"
-        android:textColor="#ffffff"
-        android:textColorHint="#ffffff"
+        android:textColor="#090000"
+        android:textColorHint="#0C0000"
         android:textSize="16sp" />
 
 
@@ -58,7 +58,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginRight="100dp"
         android:background="@drawable/search_outline"
-        android:backgroundTint="#555555"
+        android:backgroundTint="#5E3030"
         android:fontFamily="@font/nunito_bold"
         android:text="login"
         android:textColor="#ffffff"
@@ -77,7 +77,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginRight="100dp"
         android:background="@drawable/search_outline"
-        android:backgroundTint="#555555"
+        android:backgroundTint="#5E3030"
         android:fontFamily="@font/nunito_bold"
         android:text="Register"
         android:textColor="#ffffff"
@@ -98,8 +98,8 @@
         android:layout_marginEnd="0dp"
         android:fontFamily="@font/berkshire_swash"
         android:gravity="center"
-        android:text="Captain's Diary"
-        android:textColor="#ffffff"
+        android:text="Scratch Pad"
+        android:textColor="#070707"
         android:textSize="50sp" />
 
     <TextView
@@ -115,7 +115,7 @@
         android:fontFamily="@font/nunito_bold"
         android:gravity="center"
         android:text="New User ? Register Here"
-        android:textColor="#ffffff"
+        android:textColor="#FA511E02"
         android:textSize="20sp" />
 
     <ProgressBar
@@ -150,7 +150,7 @@
         android:fontFamily="@font/nunito_bold"
         android:gravity="center"
         android:text="Forget Password ? Reset Here"
-        android:textColor="#ffffff"
+        android:textColor="#FA511E02"
         android:textSize="20sp" />
 
 
