--- a/DIARY/app/src/main/res/layout/activity_show_list.xml
+++ b/DIARY/app/src/main/res/layout/activity_show_list.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
     android:orientation="vertical"
     android:padding="2pt"
-    tools:context=".ShowList" >
+    tools:context=".ShowList">
 
     <TextView
         android:id="@+id/color"
@@ -20,7 +19,7 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/berkshire_swash"
         android:text="List of Items"
-        android:textColor="#555555"
+        android:textColor="#5E3030"
         android:textSize="30sp" />
 
     <EditText
@@ -54,7 +53,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginRight="100dp"
         android:background="@drawable/search_outline"
-        android:backgroundTint="#555555"
+        android:backgroundTint="#5E3030"
         android:fontFamily="@font/nunito_bold"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
@@ -94,6 +93,7 @@
         android:layout_marginEnd="19dp"
         android:layout_marginBottom="27dp"
         android:src="@drawable/ic_add_black_24dp"
+        app:backgroundTint="#5E3030"
         app:fabSize="normal"
         app:maxImageSize="40dp" />
 
