--- a/DIARY/app/src/main/res/layout/activity_tv.xml
+++ b/DIARY/app/src/main/res/layout/activity_tv.xml
@@ -101,6 +101,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="95dp"
         android:src="@drawable/ic_delete_black_24dp"
+        app:backgroundTint="#5E3030"
         app:fabSize="mini" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -111,6 +112,7 @@
         android:layout_marginTop="60dp"
         android:layout_marginEnd="3dp"
         android:src="@drawable/ic_share_black_24dp"
+        app:backgroundTint="#5E3030"
         app:fabSize="mini" />
 
 
@@ -121,8 +123,9 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="3dp"
-        android:src="@drawable/ic_volume_up_black_24dp"
         android:enabled="false"
+        android:src="@drawable/ic_volume_up_black_24dp"
+        app:backgroundTint="#5E3030"
         app:fabSize="mini" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -134,6 +137,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="48dp"
         android:src="@drawable/ic_save_black_24dp"
+        app:backgroundTint="#5E3030"
         app:fabSize="mini" />
 
 </RelativeLayout>
