--- a/DIARY/app/src/main/res/layout/activity_editor.xml
+++ b/DIARY/app/src/main/res/layout/activity_editor.xml
@@ -5,6 +5,7 @@
     android:id="@+id/ed1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFF9C4"
     android:orientation="vertical"
     tools:context=".editor">
 
