--- a/DIARY/app/src/main/res/layout/activity_show_list.xml
+++ b/DIARY/app/src/main/res/layout/activity_show_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFF9C4"
     android:orientation="vertical"
     android:padding="2pt"
     tools:context=".ShowList">
