--- a/DIARY/app/src/main/res/layout/activity_signup1.xml
+++ b/DIARY/app/src/main/res/layout/activity_signup1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/back1"
+    android:background="@drawable/paper"
     tools:context=".Signup1">
 
     >
